--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/dates": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
     "@mantine/modals": "^7.11.1",
+    "@tabler/icons": "^3.16.0",
     "@tabler/icons-react": "^3.16.0",
     "dayjs": "^1.11.10",
     "next": "14.2.4",
