--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dayjs": "^1.11.10",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-background-slider": "^4.0.0-next.3",
+    "react-dom": "^18",
+    "react-slideshow-image": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
