--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^3.16.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
     "react-background-slider": "^4.0.0-next.3",
