--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/modals": "^7.11.1",
     "@tabler/icons": "^3.16.0",
     "@tabler/icons-react": "^3.16.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "moment": "^2.30.1",
