--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL="https://staging.tmgl.org/wp-json"
+NEXT_PUBLIC_API_BASE_URL="https://teste.tmgl.org/wp-json"
 BASE_URL="http://localhost:3000"
+POSTSPERPAGE= 10
