--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-background-slider": "^4.0.0-next.3",
     "react-dom": "^18",
+    "react-hotjar": "^6.3.1",
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "slick-carousel": "^1.8.1"
