--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/carousel": "^7.12.2",
     "@mantine/core": "^7.11.1",
     "@mantine/dates": "^7.11.1",
+    "@mantine/form": "^7.13.1",
     "@mantine/hooks": "^7.11.1",
     "@mantine/modals": "^7.11.1",
     "@tabler/icons": "^3.16.0",
