--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_API_BASE_URL="https://teste.tmgl.org/wp-json"
 BASE_URL="http://localhost:3000"
 POSTSPERPAGE= 10
+BASE_SEARCH_URL="https://pesquisa.bvsalud.org/tmgl/"
