--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL="https://teste.tmgl.org/wp-json"
-BASE_URL="http://localhost:3000"
+BASE_URL="http://localhost:3010"
 POSTSPERPAGE= 10
+PORT=4000
 BASE_SEARCH_URL="https://pesquisa.bvsalud.org/tmgl/"
