--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
+    "he": "^1.2.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
@@ -31,6 +32,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
