feature: region home route

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL="https://teste.tmgl.org/wp-json"
-WP_BASE_URL="https://teste.tmgl.org/"
+WP_BASE_URL="https://teste.tmgl.org"
 BASE_URL="http://localhost:3010"
 POSTSPERPAGE= 10
 PORT=4000
