--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ WP_BASE_URL="https://wp.teste.tmgl.org"
 BASE_URL="http://localhost:3010"
 POSTSPERPAGE= 10
 PORT=4000
-BASE_SEARCH_URL="https://pesquisa.bvsalud.org/tmgl/"
+BASE_SEARCH_URL="https://pesquisa.tmgl.org/tmgl/"
