--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "he": "^1.2.0",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/he": "^1.2.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
