--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons": "^3.16.0",
     "@tabler/icons-react": "^3.16.0",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "he": "^1.2.0",
@@ -33,6 +34,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/he": "^1.2.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
