--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_BASE_URL="https://wp.teste.tmgl.org/wp-json"
+NEXT_PUBLIC_API_BASE_URL="https://wp.staging.tmgl.org/wp-json"
 WP_BASE_URL="https://wp.teste.tmgl.org"
 BASE_URL="http://localhost:3010"
 POSTSPERPAGE= 10
