--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hotjar": "^6.3.1",
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
+    "rss-parser": "^3.13.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
