--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "rss-parser": "^3.13.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
@@ -42,6 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/xml2js": "^0.4.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.39",
