--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.13.1",
     "@mantine/hooks": "^7.11.1",
     "@mantine/modals": "^7.11.1",
+    "@stoddabr/react-tableau-embed-live": "^0.3.29",
     "@tabler/icons": "^3.16.0",
     "@tabler/icons-react": "^3.16.0",
     "axios": "^1.7.7",
