--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types", "./src/types/@types"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
