--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coveops/vimeo-thumbnail": "^1.0.2",
     "@mantine/carousel": "^7.12.2",
     "@mantine/core": "^7.11.1",
     "@mantine/dates": "^7.11.1",
