--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_API_BASE_URL="https://wp.test.tmgl.org/wp-json"
-WP_BASE_URL="https://wp.test.tmgl.org"
+NEXT_PUBLIC_API_BASE_URL="https://wp.staging.tmgl.org/wp-json"
+WP_BASE_URL="https://wp.staging.tmgl.org"
 BASE_URL="http://localhost:3010"
 POSTSPERPAGE= 10
 PORT=4000
