--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "14.2.4",
+    "pdfjs-dist": "^5.3.31",
     "react": "^18",
     "react-background-slider": "^4.0.0-next.3",
     "react-dom": "^18",
@@ -42,6 +43,7 @@
     "@types/he": "^1.2.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
