--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons": "^3.16.0",
     "@tabler/icons-react": "^3.16.0",
     "axios": "^1.7.7",
+    "canvas": "^3.1.2",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
@@ -27,11 +28,16 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "14.2.4",
+    "node-fetch": "^3.3.2",
+    "pdf-poppler": "^0.2.1",
+    "pdf-thumbnail": "^1.0.6",
     "pdfjs-dist": "^5.3.31",
+    "puppeteer": "^24.11.2",
     "react": "^18",
     "react-background-slider": "^4.0.0-next.3",
     "react-dom": "^18",
     "react-hotjar": "^6.3.1",
+    "react-pdf": "^10.0.1",
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "rss-parser": "^3.13.0",
@@ -43,6 +49,7 @@
     "@types/he": "^1.2.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/pdf-thumbnail": "^1.0.4",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^18",
     "@types/react-dom": "^18",
