--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "node-fetch": "^3.3.2",
     "pdf-poppler": "^0.2.1",
     "pdf-thumbnail": "^1.0.6",
-    "pdfjs-dist": "^5.3.31",
+    "pdfjs-dist": "^3.9.179",
     "puppeteer": "^24.11.2",
     "react": "^18",
     "react-background-slider": "^4.0.0-next.3",
     "react-dom": "^18",
     "react-hotjar": "^6.3.1",
-    "react-pdf": "^10.0.1",
+    "react-pdf": "^5.7.2",
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "rss-parser": "^3.13.0",
@@ -53,6 +53,7 @@
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-pdf": "^7.0.0",
     "@types/react-slick": "^0.23.13",
     "@types/xml2js": "^0.4.14",
     "eslint": "^8",
