--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL="https://wp.teste.tmgl.org/wp-json"
 WP_BASE_URL="https://wp.teste.tmgl.org"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 BASE_URL="http://localhost:3010"
 POSTSPERPAGE= 10
 PORT=4000
