--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_API_BASE_URL="https://wp.teste.org/wp-json"
-WP_BASE_URL="https://wp.teste.tmgl.org"
-NEXT_PUBLIC_BASE_URL="https://teste.tmgl.org"
-BASE_URL="https://teste.tmgl.org"
+NEXT_PUBLIC_API_BASE_URL="https://wp.staging.org/wp-json"
+WP_BASE_URL="https://wp.staging.tmgl.org"
+NEXT_PUBLIC_BASE_URL="https://staging.tmgl.org"
+BASE_URL="https://staging.tmgl.org"
 POSTSPERPAGE= 10
 PORT=4000
 BASE_SEARCH_URL="https://search.tmgl.org/tmgl/"
