--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#tms_pdfs
+/public/WHO_TMS_II
+
 # dependencies
 /node_modules
 /.pnp
